Added a grid that can be toggled.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <h3>Designed By <a href="https://github.com/ShaunLaFleur">Shaun LaFleur</a></h3>
       <button id="clear-grid">Clear Sketch-Pad</button>
       <button id="resize">Resize Sketch-Pad</button>
+      <button id="borderbutton">Grid: On</button>
     </div>
 
    	<div id="colorswab">
